# ChangeLog for dev-libs/uthash
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -uthash-1.3.ebuild,
  +uthash-1.4.ebuild:
  Version bump, remove old

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> uthash-1.3.ebuild:
  Avoid returning zero if a test fails

  30 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> uthash-1.3.ebuild:
  Make doins, and dodoc die on failure

  28 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -uthash-1.2-r1.ebuild, +uthash-1.3.ebuild:
  Version bump, honour Gentoo CFLAGS according to release changes, don't
  install the manpage since it was removed from this release, install
  ChangeLog, remove old

  11 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  uthash-1.2-r1.ebuild:
  Simplify die messages, while there avoid using identical die messages in the
  same function to ease error identification

  03 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  uthash-1.2-r1.ebuild:
  Simplify sed calls

  29 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  uthash-1.2-r1.ebuild:
  Remove redundant cd "${S}"

  24 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -uthash-1.2.ebuild,
  +uthash-1.2-r1.ebuild:
  perl is needed on the test phase, install the txt instead of the html,
  remove old

  15 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +metadata.xml,
  +uthash-1.2.ebuild:
  New Ebuild for bug 205911
