@@ -1,4 +1,4 @@
-DIST uthash-1.4.tar.bz2 79701 RMD160 331ae92d06bdabddcdccbb3ec5019bc6095ac1c6 SHA1 4b6ac08c1b60c2c1440357c7ed41858b6d6d9f66 SHA256 550b023c419cd2efae0a5a5aa4f6f531131b27f485e56050da2ba43a60f61fa1
-EBUILD uthash-1.4.ebuild 704 RMD160 6c4719f3bce7375b0f7e4a8dbfa0e7792c87f74e SHA1 708d33bb3afc919576eedc456d8ac6f1ca174ee3 SHA256 70dbc9dec63a077d9ad37899aa5a1749940037c2986afe47ef6a216783d4acab
-MISC ChangeLog 1468 RMD160 cb5e21fb2363457118b89c3a42e2ca5bdf536ff0 SHA1 baf562825d32b463a913fcd2addbbf9442399a08 SHA256 8dea220ec76b645d88bfdd5cabfcb4676351bbc885d9b9335fd770cc3d88b7f5
+DIST uthash-1.5.tar.bz2 281640 RMD160 083cf29284bd6acaa4c44b3c82ebe34776bfb3f7 SHA1 95642e68ada15977601ae3466ccf123f2b3220df SHA256 d808fd135c5d745cf75d81e15b4638674729e2876e8f457b6958522217700193
+EBUILD uthash-1.5.ebuild 708 RMD160 40596e858659ac10e8807fe7af976fdda8f67b90 SHA1 6f3a8cc74b1d465a3d1bb03e8fb721615e66e3d7 SHA256 b8332395d50af23fff1ab951b192a9d09f3d82fbc03a32ea558b026aab69e199
+MISC ChangeLog 1586 RMD160 009e0baa26d9336a999a941243bed36ce2de1d26 SHA1 f7515fd8edfe39c1481aca520581bd71a61b51ba SHA256 70533bd104c69bbeb7fe1fb6a91fab9bc381e0cef0618709f35500a48e80371e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
