@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/uthash
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Mar 2009; Tiago Cunha <tcunha@gentoo.org> -uthash-1.4.ebuild,
+  +uthash-1.5.ebuild:
+  Version bump, remove old.
 
   24 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -uthash-1.3.ebuild,
   +uthash-1.4.ebuild:
